# xray-decky

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLATION.md  README.md  SECURITY.md  decky-loader-plugin-best-practices.md  deploy.sh  eslint.config.mjs  main.py  package-and-deploy.sh  package.json  plugin.json  pnpm-lock.yaml  pyproject.toml  rollup.config.js  steamos network restrictions.md
.cursor/rules/: specify-rules.mdc
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  shellcheck.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: requirements.txt
backend/src/: cert_utils.py  config_parser.py  connection_manager.py  error_codes.py  import_server.py  kill_switch.py  system_proxy.py  tun_manager.py  xray_manager.py
backend/static/: import.css  import.html
backend/tests/: test_placeholder.py
docs/: DEVELOPMENT.md  README.md  RELEASING.md  index.html
docs/plugin-page/: index.html
docs/styles/: main.css
pages/: README.md  index.html
scripts/: Install-Xray-Decky.desktop  README.md  install-xray-decky.sh
specs/001-xray-vless-decky/: ANALYSIS_REPORT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-vless-import-qr/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-refactor-decky-ux/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-plugin-public-page/: data-model.md  plan.md  spec.md  (+3 more)
src/: index.tsx
(+41 files in other folders)
