[project]
name = "xray-decky"
version = "1.0.0"
description = "Decky Loader plugin for VLESS proxy connections with Reality protocol support"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff.lint.per-file-ignores]
# Imports must follow sys.path.insert(0, PLUGIN_DIR) so backend modules resolve
"main.py" = ["E402"]
